--- a/Frontend/cart.html
+++ b/Frontend/cart.html
@@ -68,109 +68,77 @@
 </section>
 
 <script>
-document.addEventListener("DOMContentLoaded", () => {
+document.addEventListener("DOMContentLoaded", async () => {
   const cartContainer = document.querySelector(".cart-section");
   const cartItemsDiv = cartContainer.querySelector(".cart-items");
   const totalSpan = document.getElementById("cart-total");
   const payBtn = document.querySelector(".pay-btn");
-  let cart = JSON.parse(localStorage.getItem("cart")) || [];
 
-  let discountApplied = false;
+  let user = null;
 
-  // Render cart items
-  function renderCart() {
-    cartItemsDiv.innerHTML = "";
-    if (cart.length === 0) {
-      cartContainer.innerHTML = "<p>Your cart is empty 🛒</p>";
+  try {
+    const response = await fetch('/api/user');
+    if (response.ok) {
+      user = await response.json();
+    } else {
+      window.location.href = 'login.html';
       return;
     }
-
-    cart.forEach(product => {
-      const itemDiv = document.createElement("div");
-      itemDiv.classList.add("cart-item");
-      itemDiv.dataset.productId = product.id;
-
-      itemDiv.innerHTML = `
-        <img src="${product.image}" alt="${product.name}" />
-        <div class="item-details">
-          <h3>${product.name}</h3>
-          <p class="price">${product.price}</p>
-        </div>
-        <div class="item-controls">
-          <button class="qty-btn minus">−</button>
-          <span class="quantity">${product.quantity || 1}</span>
-          <button class="qty-btn plus">+</button>
-          <button class="delete-btn">🗑</button>
-        </div>
-      `;
-
-      const qtySpan = itemDiv.querySelector(".quantity");
-
-      // Minus button
-      itemDiv.querySelector(".minus").addEventListener("click", () => {
-        if (product.quantity > 1) {
-          product.quantity--;
-          qtySpan.textContent = product.quantity;
-          localStorage.setItem("cart", JSON.stringify(cart));
-          updateTotal();
-        }
-      });
-
-      // Plus button
-      itemDiv.querySelector(".plus").addEventListener("click", () => {
-        product.quantity++;
-        qtySpan.textContent = product.quantity;
-        localStorage.setItem("cart", JSON.stringify(cart));
-        updateTotal();
-      });
-
-      // Delete button
-      itemDiv.querySelector(".delete-btn").addEventListener("click", () => {
-        cart = cart.filter(p => p.id !== product.id);
-        localStorage.setItem("cart", JSON.stringify(cart));
-        renderCart();
-      });
-
-      cartItemsDiv.appendChild(itemDiv);
-    });
-
-    updateTotal();
+  } catch (error) {
+    console.error('Error fetching user status:', error);
+    window.location.href = 'login.html';
+    return;
   }
 
-  // Total calculation
-  function updateTotal() {
-    let total = 0;
-    cart.forEach(product => {
-      const priceNum = parseInt(product.price.replace('₹',''));
-      const qty = product.quantity || 1;
-      total += priceNum * qty;
-    });
+  async function renderCart() {
+    try {
+      const response = await fetch('/api/cart');
+      const cart = await response.json();
 
-    if(discountApplied) total = Math.round(total / 2);
-    totalSpan.textContent = `₹${total}`;
-  }
-
-  // ===== Coupon Code =====
-  const couponInput = document.getElementById("coupon-code");
-  const applyBtn = document.getElementById("apply-coupon");
-
-  applyBtn.addEventListener("click", () => {
-    const code = couponInput.value.trim().toUpperCase();
-    if(code === "WELCOME50") {
-      if(!discountApplied){
-        discountApplied = true;
-        updateTotal();
-        alert("🎉 Congratulations! You have applied 50% discount successfully!");
-      } else {
-        alert("Coupon already applied!");
+      cartItemsDiv.innerHTML = "";
+      if (!cart || cart.items.length === 0) {
+        cartContainer.innerHTML = "<p>Your cart is empty 🛒</p>";
+        return;
       }
-    } else {
-      alert("❌ Incorrect code applied. Only 'WELCOME50' is valid.");
-    }
-  });
 
-  // ===== Pay Now Button Validation =====
-  payBtn.addEventListener("click", () => {
+      cart.items.forEach(item => {
+        const itemDiv = document.createElement("div");
+        itemDiv.classList.add("cart-item");
+        itemDiv.dataset.productId = item.productId._id;
+
+        itemDiv.innerHTML = `
+          <img src="${item.productId.image}" alt="${item.productId.name}" />
+          <div class="item-details">
+            <h3>${item.productId.name}</h3>
+            <p class="price">₹${item.productId.price}</p>
+          </div>
+          <div class="item-controls">
+            <span class="quantity">Qty: ${item.quantity}</span>
+            <button class="delete-btn">🗑</button>
+          </div>
+        `;
+
+        // Delete button
+        itemDiv.querySelector(".delete-btn").addEventListener("click", async () => {
+          try {
+            await fetch(`/api/cart/remove/${item.productId._id}`, { method: 'DELETE' });
+            renderCart();
+          } catch (error) {
+            console.error('Error removing item from cart:', error);
+          }
+        });
+
+        cartItemsDiv.appendChild(itemDiv);
+      });
+
+      totalSpan.textContent = `₹${cart.total}`;
+    } catch (error) {
+      console.error('Error fetching cart:', error);
+      cartContainer.innerHTML = "<p>Error loading cart. Please try again later.</p>";
+    }
+  }
+
+  payBtn.addEventListener("click", async () => {
     const name = document.getElementById("name").value.trim();
     const phone = document.getElementById("phone").value.trim();
     const house = document.getElementById("house").value.trim();
@@ -183,12 +151,25 @@ document.addEventListener("DOMContentLoaded", () => {
       return;
     }
 
-    if(cart.length === 0){
-      alert("Cart is empty!");
-      return;
-    }
+    const shippingAddress = `${name}, ${house}, ${locality}, ${city}, ${pincode}`;
 
-    alert("✅ Address verified! Proceeding to payment...");
+    try {
+        const response = await fetch('/api/orders', {
+            method: 'POST',
+            headers: { 'Content-Type': 'application/json' },
+            body: JSON.stringify({ shippingAddress })
+        });
+
+        if (response.ok) {
+            alert('Order placed successfully!');
+            window.location.href = 'mainpage.html';
+        } else {
+            const data = await response.json();
+            alert(data.error || 'Failed to place order.');
+        }
+    } catch (error) {
+        console.error('Error placing order:', error);
+    }
   });
 
   renderCart();
