--- a/Frontend/mainpage.html
+++ b/Frontend/mainpage.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
+  <meta name="viewport">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>V Lady</title>
   <link rel="stylesheet" href="style.css" />
@@ -17,7 +18,6 @@
     rel="stylesheet"
     href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css"
   />
-  <script src="auth.js" defer></script>
 </head>
 <body>
   <header>
@@ -31,8 +31,6 @@
         <li><a href="about.html"><i class="fa fa-circle-info"></i></a></li>
         <li><a href="cart.html"><i class="fa-solid fa-cart-shopping"></i></a></li>
         <li><a href="#contact-section"><i class="fa fa-envelope"></i></a></li>
-        <li><a href="login.html"><i class="fa fa-user"></i></a></li>
-        <li><a href="profile.html" class="profile-link" style="display: none;"><i class="fa fa-user-circle"></i></a></li>
       </ul>
     </nav>
   </header>
@@ -89,12 +87,13 @@
 </section>
 <!-- Photo Banner Section -->
 <section class="photo-banner1">
-  <img src="https://1.bp.blogspot.com/-b-2SgNUrFHg/WVSvmewWqgI/AAAAAAAAAK0/1K4YCcbYjhokHwV_IgiVJN9mEnQoWunIwCPcBGAYYCw/s1600/fashion-portrait-nicole-6347.jpg" alt="Banner Image" class="banner-img1" />
+  <img src="https://1.bp.blogspot.com/-b-2SgNUrFHg/WVSvmewWqgI/AAAAAAAAAK0/1K4YCcbYjhokHwV_IgiVJN9mEnQoWunIwCPcBGAYYCw/s1600/fashion-portrait-nicole-6347.jpg"><alt="Banner Image" class="banner-img1" />
   <a href="#under999" class="shop-now-btn1"> 999 </a>
 </section>
 
 <!-- 🛍 New Product Section -->
 <section class="new-products">
+  <section id="new-products"></section>
   <h2>FEATURED PRODUCTS</h2>
   <div class="product-container">
 
@@ -211,7 +210,7 @@
       <div class="container">
         <div class="top">
           <a href="productdetails.html">
-            <img src="https://images.pexels.com/photos/20086704/pexels-photo-20086704.jpeg" alt="Product 4" />
+            <img src="IMG_6726.PNG" alt="Product 4" />
           </a>
         </div>
         <div class="bottom">
@@ -237,7 +236,7 @@
       <div class="container">
         <div class="top">
           <a href="productdetails.html">
-            <img src="https://images.pexels.com/photos/20086704/pexels-photo-20086704.jpeg" alt="Product 5" />
+            <img src="IMG_6727.PNG" alt="Product 5" />
           </a>
         </div>
         <div class="bottom">
@@ -262,7 +261,7 @@
       <div class="container">
         <div class="top">
           <a href="productdetails.html">
-            <img src="https://images.pexels.com/photos/20086704/pexels-photo-20086704.jpeg" alt="Product 6" />
+            <img src="IMG_6726.PNG" alt="Product 6" />
           </a>
         </div>
         <div class="bottom">
@@ -294,5 +293,41 @@
   </a>
 </section>
   <script src="script.js"></script>
+  <!-- Only the modified parts are important, the rest of your HTML/CSS remains unchanged -->
+<script>
+document.addEventListener("DOMContentLoaded", () => {
+  const productWrappers = document.querySelectorAll(".wrapper");
+
+  productWrappers.forEach(wrapper => {
+    const productId = wrapper.dataset.productId;
+    const productName = wrapper.querySelector(".details h1").textContent;
+    const productPrice = wrapper.querySelector(".details .discounted-price").textContent;
+    const productMRP = wrapper.querySelector(".details .mrp span")?.textContent || "";
+    const productImage = wrapper.querySelector(".top img").src;
+    const soldOutStatus = wrapper.dataset.soldOut === "true";
+
+    const product = {
+      id: productId,
+      name: productName,
+      price: productPrice,
+      mrp: productMRP,
+      image: productImage,
+      quantity: 1,
+      soldOut: soldOutStatus,
+      category: "candy-bags" // ✅ Important: identifies the category
+    };
+
+    // LINK TO PRODUCT DETAILS
+    wrapper.querySelector(".top a").addEventListener("click", (e) => {
+      e.preventDefault();
+      localStorage.setItem("selectedProduct", JSON.stringify(product)); // Save clicked product
+      window.location.href = "productdetails.html";
+    });
+
+    // SOLD OUT, WISHLIST, ADD TO CART, BUY NOW logic (same as before)
+    // ...
+  });
+});
+</script>
 </body>
 </html>
