--- a/Frontend/about.html
+++ b/Frontend/about.html
@@ -17,6 +17,26 @@
     rel="stylesheet"
     href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css"
   />
+  <style>
+          /* ===========================
+       FOOTER
+    ============================ */
+    footer.site-footer {
+      width: 100%;
+      padding: 20px;
+      text-align: center;
+      background: #222;
+      color: #fff;
+      margin-top: 660px;
+    }
+        /* Bigger text on desktop */
+   @media (min-width: 768px) {
+  footer.site-footer {
+    font-size: 29px;
+  }
+  </style>
+    
+  </style>
 </head>
 <body>
   <header>
@@ -29,7 +49,7 @@
         <li><a href="mainpage.html"><i class="fa fa-house-chimney"></i></a></li>
         <li><a href="about.html"><i class="fa fa-circle-info"></i></a></li>
         <li><a href="cart.html"><i class="fa-solid fa-cart-shopping"></i></a></li>
-        <li><a href="#"><i class="fa fa-envelope"></i></a></li>
+        <li><a href="mainpage.html"><i class="fa fa-envelope"></i></a></li>
       </ul>
     </nav>
   </header>
